Should not be visible

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       href="style.css
     "
     />
-    <script src="./scripts/util/setAppHeight.js"></script>
+    <!-- <script src="./scripts/util/setAppHeight.js"></script> -->
     <title>Evolving Game</title>
   </head>
   <body>
     <div class="container">
-      This should be visible
+      This should not be visible
       <canvas></canvas>
       <div id="player"></div>
     </div>
