re-added sizing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="style.css
     "
     />
-    <!-- <script src="./scripts/util/setAppHeight.js"></script> -->
+    <script src="./scripts/util/setAppHeight.js"></script>
     <title>Evolving Game</title>
   </head>
   <body>
